Update MediaService.java